@@ -2,6 +2,8 @@ AUX phidget21-crosscompile.patch 709 RMD160 28c7fc6f7f9b4717ca85c81afa317a156d01
 AUX phidget21-java.patch 785 RMD160 956f5913c5ca75e120de97796d2e6ac07b5f85be SHA1 4c44ef073ef75c70cd2b05892e0161930df0c21d SHA256 045ea70c94fe3a3f0e3b92b295ae643a20ee7e378cae1258ee1d14a7c2f8cb2f
 AUX phidget21-libdir.patch 562 RMD160 b4d98da1326708f13ec19a938c64e829431b975a SHA1 bbc770a37506753ce1c8cd5256c337db6ed64ac1 SHA256 12d90ad6ea8d4ca2faa0d533e321847241620d4cc4d624e816c4e69a22e6c726
 DIST Phidgetlinux_2.1.4.20080924.tar.gz 292176 RMD160 2360bc2ccc14d2afd30de11386eac3f4e3399cf0 SHA1 a296abee3f48d8126b521b10e487cd77fe07051d SHA256 7f60fc29147b45bbe0fa6cca769bf8a940839b13b8786bdfbca18bb54822cb25
+DIST Phidgetlinux_2.1.5.20081023.tar.gz 304986 RMD160 08819880bbf364cbf388c826f2dd8b4c3dba5933 SHA1 3f1e0ad9b610968ee0539093be76ff539cc66210 SHA256 a03c0c46fa2901cc536492933da30711f522cb9776fd15b3e556f3cba2cdd709
 EBUILD phidget-2.1.4.20080924.ebuild 1263 RMD160 4536aa3b392577048a20648948ec59378e39a4a1 SHA1 4452773b19938aabeb2b31d1557dbd66df13aac4 SHA256 8752907dc9ebccc2d19313e0197dac948ee6f050f33e7e27f0c4128ee1af8fb1
+EBUILD phidget-2.1.5.20081023.ebuild 1263 RMD160 4536aa3b392577048a20648948ec59378e39a4a1 SHA1 4452773b19938aabeb2b31d1557dbd66df13aac4 SHA256 8752907dc9ebccc2d19313e0197dac948ee6f050f33e7e27f0c4128ee1af8fb1
 MISC ChangeLog 458 RMD160 004eeb4801303dc7222ebb3e60a0463d0ce7f316 SHA1 5b56f9db211541f60d2899fa5a1b21a9c19fd5ba SHA256 f65c0096c64c8ffa174b7d865243d7701968356c8ce6e11dcca9f63d9f1c959b
-MISC ChangeLog~ 3666 RMD160 66cb4dd33af7e01d9cddb6d426cf6a23e4ed4cd5 SHA1 69f1df908689e7aa10662bec32bbec9a9f50a2d1 SHA256 3106e6ce482f8b35c9129cf09af41fb9634263ed1186dec32ef1bc8436f62b34
+MISC Manifest.orig 1627 RMD160 9baafeb9e147eaccd134b25b7e52d637b87e21be SHA1 5880bb7f0fa519d04b934fd60a308800531ad399 SHA256 5853f31a83152c57f21f29857cf2b6b0e25b2d353ed65d3228e29be36bae21f9
